Fix opening of remote URLs without filename

BUG:373213
Differential Revision: https://phabricator.kde.org/D3999

(cherry picked from commit d42d074299295308f22d36fe4ce456e26e4cd398)